# halo

./: .gitignore  CMakeLists.txt  LICENSE  PARTS.md  README.md  partitions.csv  sdkconfig.defaults
.cache/clangd/index/: credentials.h.2706F5F0EF54CADD.idx  esp_log.c.30DEE22C12740C2A.idx  esp_zigbee_aps.h.507E491FAAFB39B1.idx  esp_zigbee_attribute.h.F80A92B43A3ABBEF.idx  esp_zigbee_bdb_commissioning.h.D07520267A95BB4D.idx  esp_zigbee_bdb_touchlink.h.70D8CB284F74CECE.idx  esp_zigbee_cluster.h.E5371D0F90CBB476.idx  esp_zigbee_core.h.7080E6E0E8163F9D.idx  esp_zigbee_endpoint.h.89C15EB7FC2EB1F2.idx  esp_zigbee_ha_standard.h.316AF86CF6DBE75B.idx  esp_zigbee_nwk.h.EEBFA94D80ED3059.idx  esp_zigbee_ota.h.E5BADFE1F503B2CF.idx  esp_zigbee_platform.h.AE0E0954A823E450.idx  esp_zigbee_secur.h.D312078E6CD4B534.idx  esp_zigbee_trace.h.289C76CA9B2430DE.idx  esp_zigbee_type.h.A6622F3D76BD1856.idx  esp_zigbee_version.h.3717FF1B69809570.idx  esp_zigbee_zcl_alarms.h.08E9D07EBCA17712.idx  (+88 more)
cad_mk1/: cad_mk1.kicad_prl  cad_mk1.kicad_pro  cad_mk1.kicad_sch
google-home/: SETUP.md  auth.js  env.example  index.js  package.json  pnpm-lock.yaml
kiCad_mk1/: #auto_saved_files#  kiCad_mk1.kicad_prl  kiCad_mk1.kicad_pro  kiCad_mk1.kicad_sch  untitled.kicad_sch  ~kiCad_mk1.kicad_sch.lck
main/: CMakeLists.txt  blink_example_main.c  credentials.h.template  halo.c  idf_component.yml  matter_devices.cpp  matter_devices.h  rotary_encoder.c  rotary_encoder.h  zigbee_devices.c  zigbee_devices.h  zigbee_hub.c  zigbee_hub.h
schematics/: ESP32-C6.kicad_sym  led_controller.kicad_sch
